--- a/src/Componests/Login/Login.css
+++ b/src/Componests/Login/Login.css
@@ -7,5 +7,8 @@
 button.btn.btn-primary.signinBtn img {
     width: 31px;
     height: 30px;
-    border-radius: 13px;
+    border-radius: 20px;
+}
+button.btn.btn-primary.w-50 {
+    font-size: 22px;
 }
